# PickOne

./: .env  .env.local  README.md
backend/: Cargo.toml
backend/src/: config.rs  main.rs  save.rs  state.rs  websocket.rs
deploy/: docker-build.main.yml  docker-swarm.cloud.yml  docker-swarm.main.local.yml  docker-swarm.main.single.yml  docker-swarm.main.yml
deploy/caddy/: Dockerfile
deploy/caddy/config/: Caddyfile  Caddyfile.local
deploy/caddy_config/: Caddyfile
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: config.ts
frontend/src/lib/components/: BarChart.svelte  TotalHeader.svelte  VoteButton.svelte
frontend/src/lib/notes/components/: Header.svelte  Note.svelte  NotesContainer.svelte  Tab.svelte  TabsContainer.svelte
frontend/src/lib/stores/: websocket.ts
frontend/src/lib/voting/: models.ts
frontend/src/lib/voting/components/: BarChart.svelte  TotalHeader.svelte  VoteButton.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/voting/: +page.svelte
frontend/static/: sprites.json
monitor/: docker-swarm.monitor.single.yml  docker-swarm.monitor.yml  prometheus_config.yml
monitor/grafana/dashboards/: realtimevoting.json
